tests/sema/fail/v5_fail_slice_i64_array.ep
# COMPILE_FAIL_CONTAINS: slice only supports str and u8[]
fun main(): void {
    let xs = new i64[] { 1, 2 }
    let ys = xs[0:1]
}
